# gupty

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: compile_and_test.yaml  refresh_caches.yaml
demo/: readme-demo.gupty
src/: gupty.cpp  keycodes.cpp  keycodes.h  keymap.h  libgupty.h  lines.cpp  lines.h  mode_auto.cpp  mode_auto.h  mode_command.cpp  mode_command.h  mode_insert.cpp  mode_insert.h  mode_passthrough.cpp  mode_passthrough.h  session.cpp  session.h
test/: type_test.gupty
